<resources>
    <string name="app_name">Quiz Nuoto</string>
    <string name="title_home">Home</string>
    <string name="title_theory">Teoria</string>
    <string name="title_chapters">Capitoli</string>
    <string name="title_simulation_results">Risultati simulazione</string>
    <string name="title_mistakes">Risposte sbagliate</string>
    <string name="title_sections">Sezioni</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_statistics">Statistiche</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Impostazioni</string>
    <string name="title_profile">Profilo</string>
    <string name="title_profile_login">Accedi</string>
    <string name="title_profile_signup">Registrazione</string>
    <string name="title_messages">Discussioni</string>
    <string name="title_discussion_section">Sezione %s</string>
    <string name="no_internet_connection_available_text">Nessuna connessione a Internet disponibile al momento</string>
    <string name="type_0_general_news_text">Generale</string>
    <string name="type_1_pill_news_text">Pillola sul nuoto</string>
    <string name="type_2_did_you_know_news_text">Lo sapevi che…</string>
    <string name="type_3_news_rules_news_text">Novità sui regolamenti</string>
    <string name="type_4_news_and_alerts_news_text">Novità e avvisi sull\'app</string>
    <string name="open_link_description">Apri link</string>
    <string name="read_more_text">Espandi ▼</string>
    <string name="read_less_text">Comprimi ▲</string>
    <string name="chapter_id_text">Capitolo %d</string>
    <string name="section_id_text">Sezione %s</string>
    <string name="author_text">di %s</string>
    <string name="start_conversation_button">Vai alla conversazione</string>
    <string name="by_chapters_tab_text">Per capitoli</string>
    <string name="by_other_tab_text">Altro</string>
    <string name="simulation_test_text">Simulazione della prova d\'esame</string>
    <string name="mistakes_text">Rivedi solo le risposte sbagliate in precedenza</string>
    <string name="no_news_available_text">Nessuna notizia disponibile. Per favore, fai swipe down per aggiornare la pagina.</string>
    <string name="no_chapters_available_text">Nessun capitolo è disponibile. Attendi il download dei dati aggiornare i dati.</string>
    <string name="no_sections_available_text">Nessuna sezione è disponibile. Attendi il download dei dati aggiornare i dati.</string>
    <string name="no_results_available_text">Nessun risultato è disponibile. Si è verificato un errore.</string>
    <string name="no_mistaks_available_text">Nessuna risposta sbagliata fino ad ora.</string>
    <string name="results_error_text">Si è verificato un errore durante il caricamento dei risultati.</string>
    <string name="no_results_chapter_text">Non sono stati trovati capitoli con i parametri specificati. Prova a effettuare una nuova ricerca.</string>
    <string name="no_results_section_text">Non sono state trovate sezioni con i parametri specificati. Prova a effettuare una nuova ricerca.</string>
    <string name="search_hint_text">Cerca…</string>
    <string name="time_residual_text">Tempo residuo: %s</string>
    <string name="time_used_text">Tempo impiegato: %s</string>
    <string name="question_number_chapter_text">Domanda %d di %d (Capitolo %d)</string>
    <string name="question_number_text">Domanda %d di %d</string>
    <string name="exit_test_button">Termina prova</string>
    <string name="theory_button">Teoria</string>
    <string name="finish_test_simulation_button">Termina</string>
    <string name="question_n_text">Domanda %d</string>
    <string name="correct_text">Corretta</string>
    <string name="wrong_text">Sbagliata</string>
    <string name="skipped_text">Saltata</string>
    <string name="exam_passed_text">Test superato</string>
    <string name="exam_not_passed_text">Test non superato</string>
    <string name="show_details_results_text">Mostra dettagli ▲</string>
    <string name="hide_details_results_text">Nascondi dettagli ▼</string>
    <string name="time_spent_details_results_text">Tempo impiegato: %s</string>
    <string name="time_residual_details_results_text">Tempo rimanente: %s</string>
    <string name="total_questions_details_results_text">Domande totali: %d</string>
    <string name="correct_answers_details_results_text">Risposte corrette: %d</string>
    <string name="wrong_answers_details_results_text">Risposte sbagliate: %d</string>
    <string name="skipped_questions_details_results_text">Domande saltate: %d</string>
    <string name="estimated_time_per_question_details_results_text">Tempo stimato per singola domanda: %s</string>
    <string name="datetime_details_results_text">Data: %s</string>
    <plurals name="seconds_text">
        <item formatted="true" quantity="one">%d secondo</item>
        <item formatted="true" quantity="two">%d secondi</item>
        <item formatted="true" quantity="few">%d secondi</item>
        <item formatted="true" quantity="other">%d secondi</item>
    </plurals>
    <plurals name="minutes_text">
        <item formatted="true" quantity="one">%d minuto</item>
        <item formatted="true" quantity="two">%d minuti</item>
        <item formatted="true" quantity="few">%d minuti</item>
        <item formatted="true" quantity="other">%d minuti</item>
    </plurals>
    <string name="closing_alert_dialog_title">Chiusura</string>
    <string name="time_over_alert_dialog_title">Tempo scaduto</string>
    <string name="sure_to_close_alert_dialog_text">Sei sicuro di voler uscire?</string>
    <string name="sure_to_close_and_cancel_simulation_alert_dialog_text">Sei sicuro di voler uscire e annullare la simulazione?\nProcedendo perderai i progressi fatti in questa sessione di simulazione.</string>
    <string name="sure_to_finish_simulation_alert_dialog_text">Sei sicuro di voler terminare la simulazione?</string>
    <string name="time_over_simulation_alert_dialog_text">Il tempo è finito.\nContinua per vedere i risultati della simulazione.</string>
    <string name="im_sure_alert_dialog_button">Sono sicuro</string>
    <string name="cancel_alert_dialog_button">Annulla</string>
    <string name="ok_alert_dialog_button">OK</string>
    <string name="forward_alert_dialog_button">Avanti</string>
    <string name="next_alert_dialog_button">Avanti</string>
    <string name="finish_alert_dialog_button">Termina</string>
    <string name="back_alert_dialog_button">Indietro</string>
    <string name="check_alert_dialog_button">Verifica</string>
    <string name="continue_alert_dialog_button">Continua</string>
    <string name="see_results_alert_dialog_button">Vedi risultati</string>
    <string name="confirm_alert_dialog_button">Conferma</string>
    <string name="no_logged_login_cancel_alert_dialog_text">Per poter usufruire di questa funzione devi effettuare l\'accesso.</string>
    <string name="no_logged_login_now_alert_dialog_button">Accedi ora</string>
    <string name="no_logged_login_now_alert_dialog_title">Accesso non effettuato</string>
    <string name="statistics_all_simulations_button">Vedi tutte le simulazioni</string>
    <string name="statistics_all_simulations_title">Tutte le simulazioni</string>
    <string name="no_simulations_available_text">Non hai fatto ancora alcuna simulazione</string>
    <string name="show_details_text">Mostra dettagli ▲</string>
    <string name="hide_details_text">Nascondi dettagli ▼</string>
    <string name="total_questions_details_statistics_text">Domande totali: %d</string>
    <string name="correct_answers_details_statistics_text">Risposte corrette: %d</string>
    <string name="wrong_answers_details_statistics_text">Risposte sbagliate: %d</string>
    <string name="skipped_questions_details_statistics_text">Domande saltate: %d</string>
    <string name="correct_answers_legend_statistics_text">Risposte corrette</string>
    <string name="skipped_questions_legend_statistics_text">Domande saltate</string>
    <string name="wrong_answers_legend_statistics_text">Risposte sbagliate</string>
    <string name="simulation_date_text">Simulazione del %s</string>
    <string name="no_logged_no_messages_text">Non hai ancora effettuato l\'accesso quindi non puoi accedere alle discussioni</string>
    <string name="log_in_now_message_text">Accedi ora</string>
    <string name="no_messages_available_text">Non sono presenti altre conversazioni alle quali potersi unire</string>
    <string name="no_messages_available_here_text">Non sono presenti messaggi in questa discussione.\n<b>Scrivine uno tu per primo!</b></string>
    <string name="loading_discussions_text"><i>Download delle discussioni in corso…</i></string>
    <string name="loading_messages_text"><i>Download dei messaggi in corso…</i></string>
    <string name="sent_message_text">%s · %s</string>
    <string name="you_message_text">Tu</string>
    <string name="reply_to_message_text">Rispondi</string>
    <string name="send_message_text">Invia</string>
    <string name="digit_something_text">Scrivi un messaggio…</string>
    <string name="sending_message_text">Invio in corso…</string>
    <string name="chapter_section_text">Capitolo %d · Sezione %s</string>
    <string name="no_logged_text">Non hai ancora effettuato l\'accesso</string>
    <string name="no_logged_log_in_button">Accedi</string>
    <string name="no_logged_sign_up_button"><u>Registrati</u></string>
    <string name="log_in_button">Accedi</string>
    <string name="log_out_button">Disconnetti</string>
    <string name="sign_up_button">Conferma registrazione</string>
    <string name="password_forgot_text"><u>Ho dimenticato la password</u></string>
    <string name="sign_up_form_name_text">Nome</string>
    <string name="sign_up_form_surname_text">Cognome</string>
    <string name="sign_up_form_born_text">Data di nascita</string>
    <string name="sign_up_form_email_text">Email</string>
    <string name="sign_up_form_password_text">Password</string>
    <string name="sign_up_form_repeat_password_text">Ripeti la password</string>
    <string name="sign_up_form_username_text">Username (pubblico)</string>
    <string name="reset_password_forgot_text">Nuova password</string>
    <string name="reset_password_forgot_button">Salva password</string>
    <string name="username_or_email_text">Username o email</string>
    <string name="user_signed_up_correctly_toast">Utente registrato correttamente</string>
    <string name="user_logged_in_successfully_toast">Accesso avvenuto con successo</string>
    <string name="password_changed_correctly_toast">Password modificata correttamente</string>
    <string name="username_or_email_or_password_are_wrong_text">Username o password, o email sono sbagliati</string>
    <string name="username_already_taken_text">Username già utilizzato</string>
    <string name="email_already_taken_text">Email già utilizzata</string>
    <string name="cannot_be_empty_text">Non può essere vuoto</string>
    <string name="password_should_match_text">Le password devono coincidere</string>
    <string name="preview_message_notification">%s</string>
    <string name="new_message_notification">Nuovo messaggio nella sezione %s</string>
    <string name="see_conversation_notification">Vedi conversazione</string>
    <string name="app_not_official_of_fin_text_first_run">Questa app <b>non</b> è ufficiale F.I.N.</string>
    <string name="title1_text_first_run">Preparati!</string>
    <string name="message1_text_first_run">Studia la <b>teoria</b>, esercitati con le domande d\'esame ed effettua <b>simulazioni</b> dell\'effettivo test che sosterrai.\nPuoi anche rivedere le domande che hai sbagliato, così da non sbagliarle più!</string>
    <string name="notifications_settings">Notifiche</string>
    <string name="delete_all_device_data_settings">Cancella tutti i dati del dispositivo</string>
    <string name="show_first_runs_again_settings">Mostra tutti i <i>tutorial iniziali</i> di nuovo</string>
</resources>